# HysightX

./: .env.example  .gitignore  AUDIT_SCOPE.md  BOOTSTRAP.md  BOOTSTRAP_REPRO_AUDIT.md  FRONTEND_PROOF_AUDIT.md  FULL_PROOF_SUMMARY_HYSIGHT28.md  FULL_PROOF_SUMMARY_HYSIGHT29.md  FULL_PROOF_SUMMARY_HYSIGHT31.md  FULL_PROOF_SUMMARY_HYSIGHT32.md  FULL_PROOF_SUMMARY_HYSIGHT34.md  FULL_PROOF_SUMMARY_HYSIGHT35.md  FULL_PROOF_SUMMARY_HYSIGHT36.md  FULL_PROOF_SUMMARY_HYSIGHT38.md  FULL_PROOF_SUMMARY_HYSIGHT39.md  FULL_PROOF_SUMMARY_HYSIGHT41.md  FULL_PROOF_SUMMARY_HYSIGHT42.md  FULL_PROOF_SUMMARY_HYSIGHT45.md  FULL_PROOF_SUMMARY_HYSIGHT47.md  HARDENING_REPORT.md  HARDENING_SUMMARY.md  Makefile  OPTIONAL_PROOF_SUMMARY.md  OPTIONAL_PROOF_SUMMARY_HYSIGHT27.md  OPTIONAL_PROOF_SUMMARY_HYSIGHT29.md  OPTIONAL_PROOF_SUMMARY_HYSIGHT31.md  OPTIONAL_PROOF_SUMMARY_HYSIGHT32.md  OPTIONAL_PROOF_SUMMARY_HYSIGHT34.md  OPTIONAL_PROOF_SUMMARY_HYSIGHT35.md  OPTIONAL_PROOF_SUMMARY_HYSIGHT36.md  OPTIONAL_PROOF_SUMMARY_HYSIGHT38.md  OPTIONAL_PROOF_SUMMARY_HYSIGHT39.md  OPTIONAL_PROOF_SUMMARY_HYSIGHT41.md  OPTIONAL_PROOF_SUMMARY_HYSIGHT42.md  OPTIONAL_PROOF_SUMMARY_HYSIGHT45.md  OPTIONAL_PROOF_SUMMARY_HYSIGHT47.md  README.md  RELEASE_NOTES.md  RELEASE_SEAL_HYSIGHT29.md  RELEASE_SEAL_HYSIGHT31.md  (+21 more)
backend/: Dockerfile  (+16 more)
hca/: .gitignore  README.md  pyproject.toml
hca/configs/: base.yaml  environments.yaml  memory.yaml  models.yaml  policy.yaml  safety.yaml
hca/docs/: architecture.md  evaluation.md  operator-runtime-contract.md  roadmap.md  runtime-contracts.md  safety-policy.md  trace-schema.md
hca/src/hca/: __init__.py  paths.py
hca/src/hca/api/: app.py  models.py  run_views.py  runtime_actions.py
hca/src/hca/autonomy/: __init__.py  attention_controller.py  checkpoint.py  evaluator.py  policy.py  reanchor.py  storage.py  style_profile.py  supervisor.py  triggers.py
hca/src/hca/cli/: __init__.py  eval.py  replay.py  smoke.py
hca/src/hca/common/: __init__.py  enums.py  time.py  types.py
hca/src/hca/evaluation/: datasets.py  harness_audit.py  harness_coordination.py  harness_embodiment.py  harness_memory.py  harness_metacognition.py  harness_proactivity.py  metrics.py
hca/tests/: conftest.py
hca/tests/integration/: test_approval_flow.py  test_runtime.py
hca/tests/unit/: run_all_v5_tests.py  test_api_completion.py  test_approval_edge_cases.py  test_approvals_v5.py  test_critic_fallback.py  test_event_timestamps.py  test_execution_order.py  test_executor.py  test_executor_policy.py  test_foundation_v5.py  test_grounded_loop.py  test_memory_events.py  test_memory_logic.py  test_memory_retrieval_hardening.py  test_memory_v5.py  test_meta_control.py  test_meta_workspace_v5.py  test_modules_api_v5.py  test_operator_tools.py  test_perception_fallback.py  test_planner_fallback.py  test_recurrence.py  test_replay_hardening.py  test_replay_integrity.py  test_runtime_replay_v5.py  test_state_enforcement.py  test_state_machine.py  test_workspace_and_budget.py  test_workspace_intents.py
memvid_service/: Cargo.toml  Dockerfile
memvid_service/src/: main.rs
(+257 files in other folders)
