[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hysight-workspace"
version = "0.1.0"
description = "Workspace metadata and tooling shell for the Hysight operator monorepo."
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black>=24.1.1",
    "flake8>=7.0.0,<8.0.0",
    "httpx>=0.27,<1.0",
    "isort>=5.13.2",
    "jsonschema>=4.23.0,<5.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "requests>=2.31.0,<3.0.0",
    "requests-mock>=1.12,<2.0.0",
    "ruff>=0.4.0,<1.0.0",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
markers = [
    "baseline: default service-free proof tier",
    "integration: opt-in proof tier for backend boundary tests",
    "live: opt-in proof tier for live-service backend tests",
    "fixture_drift: opt-in backend/frontend generated fixture drift check",
    "slow: marks tests as slow-running — requires real HCA Runtime (deselect with '-m \"not slow\"')",
]
filterwarnings = ["ignore:.*python_multipart.*:PendingDeprecationWarning"]
