[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-cognitive-agent"
version = "0.1.0"
description = "A bounded cognitive agent runtime with a global workspace, meta monitoring, persistent memory and approval‑gated execution."
authors = [{ name = "OpenAI User", email = "user@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.25,<1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.27"]

[project.scripts]
hca-smoke = "hca.cli.smoke:main"
hca-eval = "hca.cli.eval:main"
hca-replay = "hca.cli.replay:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hca = ["py.typed"]
"hca.common" = ["py.typed"]
"hca.modules" = ["py.typed"]
"hca.runtime" = ["py.typed"]
"hca.workspace" = ["py.typed"]
