[package]
name = "memvid-sidecar"
version = "0.1.0"
edition = "2021"
description = "Axum HTTP sidecar exposing the HCA memory contract (ingest / retrieve / maintain) backed by the memvid Rust memory engine."

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memvid-core = { path = "../memvid", default-features = false, features = [
    "lex",
] }
hnsw = { version = "0.11.0", features = ["serde"] }
space = "0.17"
rand_pcg = "0.3"
